--- a/assets/css/admin.css
+++ b/assets/css/admin.css
@@ -5,10 +5,10 @@ body{
     clear: both;
 }
 #north{
-    height: 50px;
+    height: 10%;
 }
 #south{
-    height: 50px;
+    height: 10%;
 }
 #west{
     float:left;
@@ -18,6 +18,17 @@ body{
     margin:0 0 0 200px;
 }
 #east{
+    margin-top: 20px;
     width:100%;
     float: left;
+}
+#header{
+    line-height: 4em;
+    text-align: right;
+    padding: 0 30px;
+}
+#copyright{
+    line-height: 4em;
+    text-align: right;
+    padding: 0 30px;
 }
